# harness

./: .env.example  .gitignore  .tool-versions  CLAUDE.md  Makefile  README.md  pyproject.toml
.claude/skills/commit/: SKILL.md
.githooks/: pre-push
config/: harness.example.yaml  help-entries.example.yaml
docs/ai/: architecture.md
docs/ai/adr/: 001-tech-stack.md  002-containerization.md  003-ui-foundations.md  004-mvp-scope.md  007-backend-engine.md  008-backend-providers.md  009-settings-ui.md  010-help-ui.md  INDEX.md
frontend/: eslint.config.js  index.html  package.json  pnpm-lock.yaml  vite.config.ts
frontend/src/: App.test.tsx  App.tsx  api.test.ts  api.ts  auth-context.ts  auth.test.tsx  auth.tsx  index.css  test-setup.ts
frontend/src/components/: AppShell.test.tsx  AppShell.tsx  ErrorBoundary.test.tsx  ErrorBoundary.tsx  ThemeToggle.test.tsx  ThemeToggle.tsx
frontend/src/lib/: chart-utils.ts  chat-client.test.ts  chat-client.ts  dashboard-client.ts  dashboard-types.ts  display-timezone.test.ts  display-timezone.ts  help-client.ts  mock-backend.test.ts  mock-backend.ts  settings-client.test.ts  settings-client.ts  settings-context.ts  settings-provider.test.tsx  settings-provider.tsx  theme.test.ts  theme.ts  time-format.ts  use-dashboard.test.tsx  use-dashboard.ts
frontend/src/routes/: Dashboard.test.tsx  Dashboard.tsx  Help.test.tsx  Help.tsx  HelpDetail.test.tsx  HelpDetail.tsx  Login.tsx  (+4 more)
scripts/: dev_totp.py
src/harness/: app.py  cli.py  dashboard.py  db.py  help.py  help_import.py  models.py  settings.py
tests/: conftest.py  test_app.py  test_cli_help_import.py  test_dashboard.py  test_help.py  test_models.py  test_settings.py
tests/auth/: test_access_token.py  test_init.py  test_password.py  test_refresh_token.py  test_routes.py  test_totp.py
tests/engine/: test_trend.py
tests/providers/: test_chat_echo.py  test_chat_registry.py  test_market_data_registry.py  test_market_data_scenario.py  test_market_data_synthesized.py  test_news_registry.py  test_news_rss.py  test_ring_buffer.py
(+62 files in other folders)
