[project]
name = "harness"
version = "0.1.0"
description = "Personal trading analysis tool for Japanese/US equities, FX, Nikkei futures, and mutual funds."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "sqlalchemy[asyncio]>=2.0",
    "aiosqlite>=0.20",
    "argon2-cffi>=25.1.0",
    "pyotp>=2.9",
    "pyjwt>=2.9",
]

[project.scripts]
harness = "harness.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/harness"]

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.24",
    "httpx>=0.27",
    "ruff>=0.15.11",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "W",   # pycodestyle warnings
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
]

[tool.ruff.lint.flake8-bugbear]
# FastAPI uses call-in-default as its dependency-injection and param-parser
# idiom: `foo: T = Depends(...)` / `Cookie(...)`. Without this allowlist,
# B008 fires on every route handler.
extend-immutable-calls = ["fastapi.Cookie", "fastapi.Depends"]
